--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
             <version>${postgresql.version}</version>
         </dependency>
 
+        <!-- Test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
