--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <postgresql.version>9.4.1212.jre7</postgresql.version>
         <hibernate.version>5.2.12.Final</hibernate.version>
         <jackson.version>2.7.8</jackson.version>
+        <lombok.version>1.16.18</lombok.version>
     </properties>
 
     <dependencies>
@@ -115,6 +116,14 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
